# logging2slack

./: Pipfile  README.md  pyproject.toml
src/logging2slack/: __init__.py
src/slack_log/: __init__.py
src/slack_logger/: __init__.py  slacklogger.py
tests/: test_slack_logger.py
