[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "slack_log"
version = "1.0.0"
authors = [
  { name="Jeff Hsu", email="adf159776@gmail.com" },
]
description = "SlackLogger"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "requests >= 2.31.0"
]

[project.urls]
"Homepage" = "https://github.com/meetjeff/slack-log"